--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "open3d-unofficial-arm"
-version = "0.19.0"
+version = "0.19.0.post1"
 description = "Universal Open3D installer: ARM wheels + fallback to official package"
 readme = "README.md"
 requires-python = ">=3.10"
